# eziTerms

./: .env.example  .gitignore  README.md  auth.py  config.py  database.py  deps.py  design_guidelines.json  eziterms.db  main.py  pyproject.toml  requirements.txt
.emergent/: emergent.yml
extension/: .env.example  GOOGLE_OAUTH_SETUP.md  README.md  content.js  extension-key.pem  index.html  manifest.json  package-lock.json  package.json  popup.js  tsconfig.json  vite.config.content.ts  vite.config.ts
extension/_metadata/generated_indexed_rulesets/: _ruleset1
extension/assets/: index-d31842a9.css  tcClassifier-4639b8d4.js
extension/models/: README.md
extension/public/: manifest.json  popup.html  popup.js  rules.json
extension/scripts/: generate-extension-key.js
extension/src/: background.js  content.tsx  extension.css  main.tsx  sidepanel.js  vite-env.d.ts
extension/src/api/: sessionApi.ts
frontend/: .env  .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  History.jsx  Landing.jsx  LoginModal.jsx  RiskCard.jsx  Watchlist.jsx  api.js  index.css
memory/: PRD.md  test_credentials.md
ml/: README.md  __init__.py  dataset.py  pipeline.py
models/: tc_page_classifier.joblib
schemas/: terms.py
scripts/: test_extension_against_local.py  test_extension_against_preview.py
services/: __init__.py  bedrock_llm.py  chatbot.py  parse_document.py  presidio_mask.py  prompts.py  tc_page_classifier.py  termsanalyse.py
test_reports/: iteration_1.json
test_reports/pytest/: pytest_results.xml
(+29 files in other folders)
