[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.0",
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "joblib>=1.4.0",
    "pillow>=11.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "pydantic-settings>=2.0.0",
    "pymupdf>=1.26.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-magic>=0.4.27 ; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.5.0",
    "spacy>=3.7.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]
